--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -44,8 +44,7 @@ jobs:
           git config --global user.name "Bot"
           git config --global user.email "empty"
           cd FinSetsForCAP
-          CUR_SHA=$(git rev-parse --verify HEAD)
-          if [ "${{ matrix.image }}" = "gapsystem/gap-docker" ] && [ "$CUR_SHA" = "$(git rev-parse origin/master)" ] && [ $(dirname "$GITHUB_REPOSITORY") = "homalg-project" ]; then \
+          if [ "${{ matrix.image }}" = "gapsystem/gap-docker" ] && [ "$(git rev-parse HEAD)" = "$(git rev-parse origin/master)" ] && [ $(dirname "$GITHUB_REPOSITORY") = "homalg-project" ]; then \
             git worktree add gh-pages/ gh-pages || (echo "There was an error. Make sure there is a branch named 'gh-pages'. See https://github.com/homalg-project/PackageJanitor#error-there-was-an-error-make-sure-there-is-a-branch-named-gh-pages"; exit 1); \
             git checkout master; \
             LANG=C.UTF-8 ./make_dist.sh --token "${{ secrets.GITHUB_TOKEN }}"; \
