--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -20,7 +20,7 @@ jobs:
       image: ${{ matrix.image }}
     steps:
       # keep workflow active even if repository has no activity for 60 days (do not execute for pull requests)
-      - run: '[ "$GITHUB_EVENT_NAME" != "pull_request" ] && curl --fail -X PUT -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/$GITHUB_REPOSITORY/actions/workflows/Tests.yml/enable'
+      - run: '[ "$GITHUB_EVENT_NAME" == "pull_request" ] || curl --fail -X PUT -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/$GITHUB_REPOSITORY/actions/workflows/Tests.yml/enablea'
       - uses: actions/checkout@v1
       - run: mkdir -p /home/gap/.gap/pkg/
       - run: sudo cp -a $GITHUB_WORKSPACE /home/gap/.gap/pkg/
